--- a/src/global.scss
+++ b/src/global.scss
@@ -107,3 +107,10 @@
 h1 {
     font-size: 45px;
 }
+
+ion-input.custom.ios .input-bottom .helper-text,
+ion-input.custom.ios .input-bottom .counter,
+ion-input.custom.md .input-bottom .helper-text,
+ion-input.custom.md .input-bottom .counter {
+  color: var(--ion-color-primary);
+}
