--- a/src/app/route-add/route-add.page.html
+++ b/src/app/route-add/route-add.page.html
@@ -23,8 +23,9 @@
       <ion-item>
         <ion-select label-placement="floating" label="Escolha o país do seu destino">
           <ion-select-option value="brasil">Brasil</ion-select-option>
+          <ion-select-option value="portugal">Portugal</ion-select-option>
           <ion-select-option value="usa">EUA</ion-select-option>
-          <ion-select-option value="france">França</ion-select-option>
+          <ion-select-option value="franca">França</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-col>
@@ -34,6 +35,8 @@
     <ion-col>
       <ion-item>
         <ion-select label-placement="floating" label="Escolha a cidade do seu destino">
+          <ion-select-option value="porto">Porto</ion-select-option>
+          <ion-select-option value="lisboa">Lisboa</ion-select-option>
           <ion-select-option value="rio">Rio de Janeiro</ion-select-option>
           <ion-select-option value="nyc">Nova Iorque</ion-select-option>
           <ion-select-option value="paris">Paris</ion-select-option>
