--- a/src/app/registo/registo.page.scss
+++ b/src/app/registo/registo.page.scss
@@ -8,7 +8,7 @@ ion-item {
   }
   
   ion-button {
-    margin-top: 25%;
+    margin-top: 15%;
     --border-radius: 35px;
     --background: #1AE4D8;
 
@@ -24,7 +24,7 @@ ion-item {
 
     padding-top: 20px;
     padding-bottom: 20px;
-
+    background: white;
   }
 
   #rowPais{
@@ -32,3 +32,4 @@ ion-item {
     padding-top: 20px;
 
   }
+
