Minor bug fixeeeeeeessssssssssss

--- a/src/app/registo/registo.page.html
+++ b/src/app/registo/registo.page.html
@@ -36,7 +36,8 @@
     <ion-row id="rowEmail">
       <ion-col>
         <ion-item>
-          <ion-input label="Email" labelPlacement="stacked" helperText="Insira o seu email" [clearOnEdit]="true" type="email" type="email" fill="solid" label="Email" labelPlacement="floating" errorText="Email Inválido" ngModel email></ion-input>
+          <ion-input label="Email" labelPlacement="stacked" placeholder="Insira o seu email" 
+            [clearOnEdit]="true" type="email" ngModel email></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
