--- a/src/app/route-add/route-add.page.html
+++ b/src/app/route-add/route-add.page.html
@@ -47,7 +47,7 @@
 
   <ion-row class="ion-text-center  ion-justify-content-center ion-align-items-center">
     <ion-col>
-      <ion-button  fill="solid" shape="round" size="large" (click)="insertRoteiro()" routerLink="/roteiro/{{destinoC}}"> Continuar</ion-button>
+      <ion-button  fill="solid" shape="round" size="large"  routerLink="/roteiro/{{destinoC}}"> Continuar</ion-button>
     </ion-col>
   </ion-row>
 
