Biblioteca de roteiros a 75%

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -34,7 +34,7 @@
         </ion-item> 
       </ion-list>
       <ion-button (click)="onSubmit()" type="submit" expand="block" fill="solid" shape="round" size="small" class="gogo">
-        Registo
+        Entrar
       </ion-button>
     </div>
   </form>
