A lot of changesssssssss, big progresssssssssssssssss

--- a/src/app/biblio/biblio.page.html
+++ b/src/app/biblio/biblio.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content class="background-image" [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Biblioteca de Roteiros</ion-title>
@@ -17,7 +17,7 @@
   <div id="container" class="divv">
     
 
-      <ion-list *ngIf="!isLoadingRoteiros">
+      <!--<ion-list *ngIf="!isLoadingRoteiros">
         <ion-item-sliding #slidingItem *ngFor="let roteiro of roteiros">
           <ion-item>
             <ion-label>{{ roteiro.nomeRoteiro }}</ion-label>
@@ -34,6 +34,26 @@
 
 
       </ion-list>
+    -->
+      <ion-row *ngFor="let roteiro of roteiros">
+        <ion-col size="9">
+            <ion-button expand="block" class="i-text shadow">
+              <ion-grid>
+                <ion-row>
+                    <p class="text nome-rot">{{ roteiro.nomeRoteiro}}</p>
+                </ion-row>
+                <ion-row>
+                    <p class="text">{{ roteiro.destinoC}}</p>
+                </ion-row>
+              </ion-grid>
+            </ion-button>
+        </ion-col>
+        <ion-col size="3">
+          <ion-button expand="block" fill="solid" class="i-text shadow"  (click)="removerRoteiro(roteiro.roteiro_id || 0)">
+            <ion-icon name="trash-outline"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
 
       <ion-list *ngIf="isLoadingRoteiros">
         <ion-item>
@@ -43,7 +63,7 @@
       </ion-list>
 
 
-    <ion-button  type="submit" expand="block" fill="solid" size="big" routerLink="/route-add">+</ion-button>
+    <ion-button class="pad shadow plus" type="submit" expand="block" fill="solid" size="big" routerLink="/route-add">+</ion-button>
     
 
   </div>
