--- a/src/app/roteiro/roteiro.page.html
+++ b/src/app/roteiro/roteiro.page.html
@@ -9,7 +9,9 @@
   <ion-content [fullscreen]="true" class="ion-padding">
     <ion-header collapse="condense">
       <ion-toolbar>
-        <ion-title size="large" class=" ion-justify-content-center">Roteiro {{roteiro}}</ion-title>
+        <ion-text class="ion-text-center">
+          <h1 id="title">Roteiro {{roteiro}}</h1>
+        </ion-text>
       </ion-toolbar>
     </ion-header>
 
