--- a/src/app/discovery/discovery.page.html
+++ b/src/app/discovery/discovery.page.html
@@ -10,13 +10,34 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Biblioteca de Roteiros</ion-title>
+      <ion-title size="large">Descobrir</ion-title>
     </ion-toolbar>
   </ion-header>
 
  <div id="container" class="divv">
     
-
+  <ion-row *ngFor="let roteiro of roteiros">
+    <ion-col size="9">
+        <ion-button expand="block" class="i-text shadow">
+          <ion-grid>
+            <ion-row>
+                <p class="text nome-rot">{{ roteiro.nomeRoteiro}}</p>
+            </ion-row>
+            <ion-row>
+            </ion-row>
+            <ion-row>
+                <p class="text">{{ roteiro.destinoC}}</p>
+            </ion-row>
+          </ion-grid>
+        </ion-button>
+    </ion-col>
+    <ion-col size="3">
+      <ion-button expand="block" shape="default" fill="solid" class="i-text shadow" (click)="saveRoteiro($event)">
+        <ion-icon [name]="iconName" [color]="iconColor" size="large"></ion-icon>
+      </ion-button>
+    </ion-col>
+  </ion-row> 
+<!--
       <ion-list *ngIf="!isLoadingRoteiros">
         <ion-item-sliding #slidingItem *ngFor="let roteiro of roteiros">
           <ion-item>
@@ -34,7 +55,7 @@
 
 
       </ion-list>
-
+-->
       <ion-list *ngIf="isLoadingRoteiros">
         <ion-item>
           <ion-label color="primary">A carregar roteiros...</ion-label>
