--- a/src/app/route-add/route-add.page.html
+++ b/src/app/route-add/route-add.page.html
@@ -5,7 +5,7 @@
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
-
+      <ion-back-button defaultHref="biblio" text="Voltar" color="dark"></ion-back-button>
     </ion-toolbar>
   </ion-header>
 
