--- a/src/app/discovery/discovery.page.html
+++ b/src/app/discovery/discovery.page.html
@@ -3,22 +3,24 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Biblioteca de Roteiros</ion-title>
+    <ion-title>Descobrir</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Biblioteca de Roteiros</ion-title>
+      <ion-title size="large">Descobrir</ion-title>
     </ion-toolbar>
   </ion-header>
+
+<ion-searchbar animated="true" debounce=250 placeholder="Encontre um Roteiro" show-clear-button="focus" (ionInput)="handleInput($event)"></ion-searchbar>
 
  <div id="container" class="divv">
     
 
-      <ion-list *ngIf="!isLoadingRoteiros">
-        <ion-item-sliding #slidingItem *ngFor="let roteiro of roteiros">
+     <!-- <ion-list *ngIf="!isLoadingRoteiros">
+        <ion-item-sliding #slidingItem *ngFor="let roteiro of results">
           <ion-item>
             <ion-label>{{ roteiro.nomeRoteiro }}</ion-label>
             <ion-note slot="end">{{roteiro.destinoC}}</ion-note>
@@ -30,10 +32,26 @@
             </ion-label>
           </ion-item-option>
           </ion-item-sliding>
-
-
-
       </ion-list>
+      -->
+
+    <ion-grid *ngIf="!isLoadingRoteiros" id="grid">
+      <ion-row *ngFor="let roteiro of results" class="div">
+        <ion-col size="9" >
+                <ion-row>
+                    <p class="text nome-rot">{{ roteiro.nomeRoteiro}}</p>
+                </ion-row>
+                <ion-row>
+                    <p class="text">{{ roteiro.destinoC}}</p>
+                </ion-row>
+        </ion-col>
+        <ion-col size="1">
+          <ion-button fill="solid" class="i-text shadow botao"  (click)="addPartilhadoBiblioteca(roteiro.id_interno)">
+            <ion-icon color="primary" name="add-circle-outline"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 
       <ion-list *ngIf="isLoadingRoteiros">
         <ion-item>
