--- a/src/app/roteiro/roteiro.page.scss
+++ b/src/app/roteiro/roteiro.page.scss
@@ -2,53 +2,14 @@ ion-menu-button {
     color: var(--ion-color-primary);
   }
   
-  #title {
+  .title {
     font-weight: bold;
-    font-size: 35px;
+    font-size: 30px;
     text-shadow: 2px 2px 5px rgb(160, 160, 160);
-  }
 
-  #container {
-    text-align: center;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
+    justify-content: flex-start;
   }
   
-  #container strong {
-    font-size: 20px;
-    line-height: 26px;
-  }
-  
-  #container p {
-    font-size: 16px;
-    line-height: 22px;
-    color: #8c8c8c;
-    margin: 0;
-  }
-  
-  #container a {
-    text-decoration: none;
-  }
-
-  ion-row {
-    margin: 0 auto;
-    width: 85%;
-  }
-
-  .main-hotspot {
-    margin: 0 auto;
-    background-color: #1AE4D8;
-    border-radius: 10px;
-    height: 50px;
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-    box-shadow: 2px 2px 5px rgb(160, 160, 160);
-    margin-bottom: 8%;
-  }
 
   .text {
     color: black !important;
@@ -59,9 +20,21 @@ ion-menu-button {
     font-size: 22px;
     font-weight: bold;
     text-shadow: 2px 2px 5px rgb(160, 160, 160);
+    height: 70px;
   }
 
-  .bottom {
-    margin-top: 100px;
+  
+  .shadow {
+    --box-shadow: 2px 2px 5px rgb(160, 160, 160);
   }
 
+  .bottom{
+
+    margin-top: 15px;
+
+  }
+
+  #grid{
+
+    padding: 3%;
+  }
