--- a/src/app/discovery/discovery.page.html
+++ b/src/app/discovery/discovery.page.html
@@ -11,7 +11,6 @@
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Descobrir</ion-title>
-      <ion-title size="large">Descobrir</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -19,7 +18,7 @@
 
  <div id="container" class="divv">
     
-  <ion-row *ngFor="let roteiro of roteiros">
+<!--  <ion-row *ngFor="let roteiro of roteiros">
     <ion-col size="9">
         <ion-button expand="block" class="i-text shadow">
           <ion-grid>
@@ -40,7 +39,7 @@
       </ion-button>
     </ion-col>
   </ion-row> 
-<!--
+
       <ion-list *ngIf="!isLoadingRoteiros">
         <ion-item-sliding #slidingItem *ngFor="let roteiro of roteiros">
           <ion-item>
