Profile Done (not CSS), only remains the maps

--- a/src/app/add-ponto-int/add-ponto-int.page.html
+++ b/src/app/add-ponto-int/add-ponto-int.page.html
@@ -2,6 +2,9 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
+      <ion-text class="ion-text-center">
+        <h2>Roteiro {{nomeP}}</h2>
+      </ion-text>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
