--- a/src/app/discovery/discovery.page.html
+++ b/src/app/discovery/discovery.page.html
@@ -14,7 +14,7 @@
     </ion-toolbar>
   </ion-header>
 
-<ion-searchbar animated="true" debounce=250 placeholder="Encontre um Roteiro" show-clear-button="focus" (ionInput)="handleInput($event)"></ion-searchbar>
+<ion-searchbar animated="true" debounce=250 placeholder="Encontre um Roteiro por Cidade" show-clear-button="focus" (ionInput)="handleInput($event)"></ion-searchbar>
 
  <div id="container" class="divv">
     
