--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -31,7 +31,7 @@
       <ion-button expand="block" fill="solid" shape="round" size="small" class="button1" (click)="registo()">
         Registo
       </ion-button>
-      <ion-button expand="block" fill="clear" shape="default" class="button2" routerLink="/folder/inbox">
+      <ion-button expand="block" fill="clear" shape="default" class="button2" routerLink="/bibio">
         Continuar sem registo
         <ion-img src="assets/imgs/right-arrow.png" id="forward"></ion-img>
       </ion-button>
